增加HC-RB套利策略

--- a/vn.tutorial/performance/Python Performance.ipynb
+++ b/vn.tutorial/performance/Python Performance.ipynb
@@ -81,7 +81,7 @@
     "    \n",
     "print u'单次耗时：%s秒' %time_per_test\n",
     "print u'单个数据点耗时：%s微秒' %(time_per_point*1000000)\n",
-    "print u'最后10个移动平均值：', result[-10:]\n"
+    "print u'最后10个移动平均值：', result[-10:]"
    ]
   },
   {
@@ -484,7 +484,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -496,7 +498,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
